--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
+    "autoprefixer-stylus": "^0.9.3",
     "browser-sync": "^2.12.8",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
